application for clientside mechanism visualisation

--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
 </head>
 
 <body>
-<p>I'm hosted with GitHub Pages.</p>
-<a href="./vmotor.html">g2 - IMG Transformation (V-Motor)<a>
+  <p>GitHub Pages of jauhl</p>
+  <a href="./vmotor.html">g2 - IMG Transformation (V-Motor)<a>
+  <p></p>
+  <a href="./mecapp/mecindex.html">Mechanismentechnik - App<a>    
 </body>
 
 </html>
