added labeljump bug example

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
   <a href="./vmotor.html">g2 - IMG Transformation (V-Motor)<a>
   <p></p>
   <a href="./mecapp/mecindex.html">Mechanismentechnik - App<a>    
+  <p></p>
+  <a href="./labeljump.html">g2-mec labeljump bug<a>        
 </body>
 
 </html>
