fixed positioning in kurbelschwinge

--- a/mecapp/kurbelschwinge.html
+++ b/mecapp/kurbelschwinge.html
@@ -163,10 +163,12 @@ var cnv = document.getElementById("cv"),
             return {x: this.B0.x + this.c*this.epsi.x, y: this.B0.y + this.c*this.epsi.y};
         }
     },
+     
+    yOffset = mec.e<0 ? mec.a + Math.abs(mec.e) + 20 : mec.a + 20, //+ mec.e+mec.c*Math.cos(mec.psi-Math.PI/2),
 
     g = g2(),
     world = g2().clr().cartesian().grid()
-                .pan(mec.a + 10, mec.a + 10)
+                .pan(mec.a + 20, yOffset)
                 .style({ls: "black", lw: 3, ld: [], ml:5, foz:16, fow:"bold"})
                 .lin(mec.A0.x, mec.A0.y, mec.B0.x, mec.B0.y, {ld:"@dashdot"})
                   .label("d","mid","right")
@@ -179,7 +181,7 @@ var cnv = document.getElementById("cv"),
 // initialisation
 if (grashof()) {
     cnv.width = 2*mec.a + mec.c + mec.d;
-    cnv.height = 2*mec.a + mec.c + mec.e;
+    cnv.height = 2*mec.a + mec.c + Math.abs(mec.e);
     range.style.width = (cnv.width<1000) ? cnv.width-45 + "px" : 1000 + "px" ;
 
     range.addEventListener("input", setPhi, false);
