added code playgrounds

--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
 </head>
 
 <body>
-  <p>GitHub Pages of jauhl</p>
+  <h2>GitHub Pages of jauhl</h2>
   <a href="./vmotor.html">g2 - IMG Transformation (V-Motor)<a>
   <p></p>
-  <a href="./mecapp/mecindex.html">Mechanismentechnik - App<a>           
+  <a href="./mecapp/mecindex.html">Mechanismentechnik - App<a>   
+  <p></p>
+  <a href="./playgrounds/pgindex.html">Code Playgrounds/Editoren<a>            
 </body>
 
 </html>
