--- a/playgrounds/pgindex.html
+++ b/playgrounds/pgindex.html
@@ -7,6 +7,8 @@
     <h1>Code Playgrounds</h1>
     <a href="./klipse-io_livedemo-monokai-v2.html">Variante 1</a> nutzt <a href="https://github.com/viebel/klipse">KLIPSE</a>, was auf <a href="https://codemirror.net/">Codemirror</a> basiert.   
     <p></p>
-    <a href="./prism_pre.html">Variante 2</a> (wie bisher + Styling) nutzt <a href="http://prismjs.com/">PRISM</a>, mit einer zus&auml;tzlichen <a href="http://jsfiddle.net/wales/2azkLnad/">Bibliothek</a> um editierbare pre tags nutzen zu k&ouml;nnen.   
+    <a href="./codemirror.html">Variante 2</a> nutzt <a href="https://codemirror.net/">Codemirror</a>, ohne zus&auml;tzliche Outputfunktionalit&auml;t. 
+    <p></p>
+    <a href="./prism_pre.html">Variante 3</a> (wie bisher + Styling) nutzt <a href="http://prismjs.com/">PRISM</a>, mit einer zus&auml;tzlichen <a href="http://jsfiddle.net/wales/2azkLnad/">Bibliothek</a> um editierbare pre tags nutzen zu k&ouml;nnen.   
   </body>
 </html>
