--- a/playgrounds/klipse-io_livedemo-monokai-v2.html
+++ b/playgrounds/klipse-io_livedemo-monokai-v2.html
@@ -60,7 +60,7 @@ myArray;
     </code>
     </pre>
 
-    <link rel="stylesheet" type="text/css" href="http://app.klipse.tech/css/codemirror.css">
+    <link rel="stylesheet" href="http://app.klipse.tech/css/codemirror.css">
     <link rel="stylesheet" href="https://gitcdn.xyz/repo/FarhadG/code-mirror-themes/master/themes/monokai-fannonedition.css">
     <script src="https://gitcdn.xyz/repo/goessner/g2/master/g2.min.js"></script>
     <script src="https://gitcdn.xyz/repo/goessner/g2-mec/master/g2.mec.min.js"></script>
