--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <p></p>
   <a href="./RETS1_v2.36_webpraesentation.html">FlySim Viergelenk<a>
   <p></p>
-  <a href="./RETS2_v1.0_webpräsentation.html">FlySim Fünfgelenk<a>          
+  <a href="./RETS2_v1.0_webpraesentation.html">FlySim Fünfgelenk<a>          
 </body>
 
 </html>
