--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
   <p></p>
   <a href="./mecapp/mecindex.html">Mechanismentechnik - App<a>   
   <p></p>
-  <a href="./playgrounds/pgindex.html">Code Playgrounds/Editoren<a>    
+  <a href="./playgrounds/pgindex.html">Code Playgrounds/Editoren<a>   
+  <p></p>
+  <a href="./webkinematik/bobillier.html">Bobillier<a>    
   <p></p>
   <a href="./RETS1_v2.36_webpraesentation.html">FlySim Viergelenk<a>
   <p></p>
