roberts app updated

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <p></p>
   <a href="./mecapp/mecindex.html">Mechanismentechnik - App<a>   
   <p></p>
-  <a href="./webkinematik/roberts.html">Satz von Roberts<a>    
+  <a href="./webkinematik/roberts2.html">Satz von Roberts<a>    
   <p></p>
   <a href="./webkinematik/bobillier_vergleich.html">Bobillier Vergleich<a>    
   <p></p>
