added Freundenstein app

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
   <p></p>
   <a href="./webkinematik/bobillier_vergleich.html">Bobillier Vergleich<a>    
   <p></p>
+  <a href="./webkinematik/freudenstein.html">Dreiwinkelzuordnung nach Freudenstein<a>    
+  <p></p>  
   <a href="./RETS1_v2.36_webpraesentation.html">FlySim Viergelenk<a>
   <p></p>
   <a href="./RETS2_v1.0_webpraesentation.html">FlySim Fünfgelenk<a>          
