updated apps & added new ones

--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
 
 <body>
   <h2>GitHub Pages of jauhl</h2>
-  <a href="./vmotor.html">g2 - IMG Transformation (V-Motor)<a>
-  <p></p>
   <a href="./mecapp/mecindex.html">Mechanismentechnik - App<a>   
   <p></p>
-  <a href="./webkinematik/roberts2.html">Satz von Roberts<a>    
+  <a href="./webkinematik/bobillier_2.html">Wendepolermittlung nach Bobillier<a>    
   <p></p>
-  <a href="./webkinematik/bobillier_vergleich.html">Bobillier Vergleich<a>    
+  <a href="./webkinematik/roberts_v3.html">Satz von Roberts<a>    
   <p></p>
-  <a href="./webkinematik/freudenstein.html">Dreiwinkelzuordnung nach Freudenstein<a>    
+  <a href="./webkinematik/freudenstein_v2.html">Dreiwinkelzuordnung nach Freudenstein<a>    
   <p></p>  
+  <a href="./webkinematik/volmer.html">Drehwinkelzuordnung nach Volmer<a>    
+  <p></p>
   <a href="./RETS1_v2.36_webpraesentation.html">FlySim Viergelenk<a>
   <p></p>
   <a href="./RETS2_v1.0_webpraesentation.html">FlySim Fünfgelenk<a>          
