--- a/webkinematik/roberts_v3.html
+++ b/webkinematik/roberts_v3.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <meta charset='utf-8'>
+    <meta name=viewport content="width=device-width, initial-scale=1">
     <title>Satz von Roberts</title>    
     <style>
         html, body {
