--- a/index.html
+++ b/index.html
@@ -9,13 +9,7 @@
   <h2>GitHub Pages of jauhl</h2>
   <a href="./mecapp/mecindex.html">Mechanismentechnik - App<a>   
   <p></p>
-  <a href="./webkinematik/bobillier_2.html">Wendepolermittlung nach Bobillier<a>    
-  <p></p>
-  <a href="./webkinematik/roberts_v3.html">Satz von Roberts<a>    
-  <p></p>
-  <a href="./webkinematik/freudenstein_v2.html">Dreiwinkelzuordnung nach Freudenstein<a>    
-  <p></p>  
-  <a href="./webkinematik/volmer.html">Drehwinkelzuordnung nach Volmer<a>    
+  <a href="./IFToMM_2017/iftomm2017index.html">IFToMM D-A-CH Konferenz 2017<a> 
   <p></p>
   <a href="./RETS1_v2.36_webpraesentation.html">FlySim Viergelenk<a>
   <p></p>
