--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <h2>GitHub Pages of jauhl</h2>
   <a href="./mecapp/mecindex.html">Mechanismentechnik - App<a>   
   <p></p>
-  <a href="./IFToMM_2017/iftomm2017index.html">IFToMM D-A-CH Konferenz 2017<a> 
+  <a href="./IFToMM_2017/iftomm2017.html">IFToMM D-A-CH Konferenz 2017<a> 
   <p></p>
   <a href="./RETS1_v2.36_webpraesentation.html">FlySim Viergelenk<a>
   <p></p>
