added A221m mechanism app

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
   <p></p>
   <a href="./RETS1_v2.36_webpraesentation.html">FlySim Viergelenk<a>
   <p></p>
-  <a href="./RETS2_v1.0_webpraesentation.html">FlySim Fünfgelenk<a>          
+  <a href="./RETS2_v1.0_webpraesentation.html">FlySim Fünfgelenk<a>   
+  <p></p>
+  <a href="./mecA221m.html">Schließmechanismus Arburg A221M<a>        
 </body>
 
 </html>
