--- a/mecA221m.html
+++ b/mecA221m.html
@@ -10,16 +10,16 @@
     <canvas id="c1" width="600" height="400" style="border-width:1px;border-style:solid"></canvas>
     <br>
     <label for="sslider">s:
-    <input type="range" id="sslider" style="width:550px;vertical-align:middle;padding:0" min="240" max="400" value="125">
+    <input type="range" id="sslider" style="width:550px;vertical-align:middle;padding:0" min="240" max="399" value="125">
     <output id="sout" for="sslider">50</output><span id="mm"> mm</span>
     </label>
     <br><br>
-    F1 = <input type="number" id="F1" value="5000"> N
+    Hydraulikkraft = <input type="number" id="F1" value="5000"> N
     <!--F1 = <span id="F1">100</span><span id="N1"> N</span>-->
     <br>
-    F2 = <span id="F2">0</span><span id="N2"> N</span><br><br>
-    Kurbellänge = <input type="number" id="a" value="200"> mm<br>
-    Koppellänge = <input type="number" id="b" value="200"> mm<br><br>
+    Schließkraft F = <span id="F2">0</span><span id="N2"> N</span><br><br>
+    <!--Kurbellänge = <input type="number" id="a" value="200"> mm<br>
+    Koppellänge = <input type="number" id="b" value="200"> mm<br><br>-->
     <canvas id="c2" width="500" height="300" style="border-width:1px;border-style:solid"></canvas>
 
     
@@ -30,9 +30,7 @@
 
     <script>
 
-const pi = Math.PI;
-
-let cnv = document.getElementById('c1'),
+var cnv = document.getElementById('c1'),
     ctx = cnv.getContext('2d'),
     cnv2 = document.getElementById('c2'),
     ctx2 = cnv2.getContext('2d'),
@@ -45,49 +43,72 @@ let cnv = document.getElementById('c1'),
 
     s = 125, // Laufvariable
 
+    pi = Math.PI,
+
     mec = {
         a:200,
         b:200,
-        F1:5000, // in
+        c:250,
+        d:250,
+        F1:-5000, // in
         get F2() {return this.F1*(Math.cos(this.phi)/( Math.tan(pi - this.theta)*Math.cos(this.phi) + Math.sin(this.phi) ))},   // out
         forces: [],
         get phi() {
-            let lambda = 0.5*((this.a*this.a - this.b*this.b)/(s*s) + 1),
-                mue = Math.sqrt((this.a*this.a)/(s*s) - lambda*lambda);
+            var lambda = 0.5*((this.a*this.a - this.b*this.b)/(s*s) + 1),
+                mue = -Math.sqrt((this.a*this.a)/(s*s) - lambda*lambda);
             return Math.atan2( (1/this.a)*(mue*s), (1/this.a)*(lambda*s) )
         },
         get ephi() { return { x:Math.cos(this.phi), y:Math.sin(this.phi)}; },
         get theta() { // zwischen x-Achse und Koppel mathem. positiv!
-            let ephi = this.ephi;
+            var ephi = this.ephi;
             return Math.atan2( (1/this.b)*(this.a*ephi.y), (1/this.b)*(this.b*ephi.x - s) )
         },
         get etheta() { return { x:Math.cos(this.psi), y:Math.sin(this.psi)}; },
 
+        get phi2() {
+            var lambda = 0.5*((this.c*this.c - this.d*this.d)/(s*s) + 1),
+                mue = -Math.sqrt((this.c*this.c)/(s*s) - lambda*lambda);
+            return Math.atan2( (1/this.c)*(mue*s), (1/this.c)*(lambda*s) )
+        },
+        get ephi2() { return { x:Math.cos(this.phi2), y:Math.sin(this.phi2)}; },
+        get theta2() { // zwischen x-Achse und Koppel mathem. positiv!
+            var ephi2 = this.ephi2;
+            return Math.atan2( (1/this.d)*(this.c*ephi2.y), (1/this.d)*(this.d*ephi2.x - s) )
+        },
+        get etheta2() { return { x:Math.cos(this.theta2), y:Math.sin(this.theta2)}; },
+
         // Gelenkpunkte
         A0: {x:0, y:0},
         get A() { return {x:this.A0.x + this.a*this.ephi.x, y:this.A0.y + this.a*this.ephi.y}; },
-        get B() { return {x:s, y:this.A0.y}; }
+        get B() { return {x:s, y:this.A0.y}; },
+        get C() { return {x:this.A0.x + this.c*this.ephi2.x, y:this.A0.y + this.c*this.ephi2.y}; }
     },  
  
     g = g2(),
 
     world = g2().clr().cartesian()
-                .pan(100, 150)
+                .pan(100, 250)
                 .use(g)
                 .use("nodfix"),
 
     dirty = true
     ;
 
+// Math.sqrt((mec.C.x-mec.A0.x)*(mec.C.x-mec.A0.x) + (mec.C.y-mec.A0.y)*(mec.C.y-mec.A0.y))
+
 function position() {
     g.del().clr()
      .bar2(mec.A0, mec.A)
      .bar2(mec.A, mec.B)
+     .bar2(mec.A0, mec.C)
+     .bar2(mec.C, mec.B)
      .slider(mec.B)
+     .damper(mec.C,mec.A, {lw:3})
      .use("nod",mec.A)
      .use("nod",mec.B)
-     .vec({x:mec.A.x, y:mec.A.y + 50}, {dx:0, dy:-45}).label("F1")
-     .vec({x:mec.B.x + 65, y:0}, {dx:-50, dy:0}).label("F2")
+     .use("nod",mec.C)
+    //  .vec({x:mec.A.x, y:mec.A.y + 5}, {dx:0, dy:45}, {ls:`crimson`, lw:2}).label("F1")
+     .vec({x:mec.B.x + 65, y:0}, {dx:-50, dy:0}, {ls:`crimson`, lw:2}).label("F")
 }        
 
 function render() {
@@ -102,33 +123,29 @@ function render() {
 function sets() {
     if (sslider.value != sout.value) {
         s = +sslider.value;
-        if ((s + 0.1) <= (mec.a + mec.b) && (mec.phi<pi/2)) {
+        // if ((s + 0.1) <= (mec.a + mec.b) && (mec.phi<pi/2)) {
             sout.innerHTML = sslider.value;
-            sout.style["color"] = "black";
+            // sout.style["color"] = "black";
             F2out.innerHTML = mec.F2.toFixed(2);
-            mm.hidden = false;
+            // mm.hidden = false;
             dirty = true;
-        } else {
-            sout.style["color"] = "red";
-            sout.innerHTML = "unzulaessiger Bereich";
-            mm.hidden = true;
-        }
+        // } else {
+        //     sout.style["color"] = "red";
+        //     sout.innerHTML = "unzulaessiger Bereich";
+        //     mm.hidden = true;
+        // }
     }
-}
-
-function setF1() {
-        mec.F1 = +F1input.value;
 }
 
 function getForces() {
     mec.forces = [];
 
-    let saveds = s;
+    var saveds = s,
         min = +sslider.min,
         max = +sslider.max;
 
     for (s=min; s<max; s+=1) {
-        if (mec.theta > pi/2 && mec.theta < pi)
+        if (mec.theta < -pi/2 && mec.theta > -pi)
         mec.forces.push(+s.toFixed(2), +mec.F2.toFixed(2));
     }
     s = saveds;
@@ -138,7 +155,7 @@ function getForces() {
 
 function plotForceGraph() {
   g2().cartesian().clr().del().rec(0, 0, cnv2.width, cnv2.height, {fs:"rgba(238, 238, 238, 1)"} )
-      .chart({ x:35,y:35,b:350,h:230,
+      .chart({ x:50,y:35,b:400,h:230,
                title:{ text:"Kraftverlauf"},
                funcs:[
                    { data:mec.forces, 
@@ -163,12 +180,12 @@ function plotForceGraph() {
 
 // Eventlistener hinzufuegen
 sslider.addEventListener("input",sets);
-F1input.addEventListener("input",function() {mec.F1 = +F1input.value; getForces();});
-ainput.addEventListener("input",function() {mec.a = +ainput.value; getForces(); dirty = true;});
-binput.addEventListener("input",function() {mec.b = +binput.value; getForces(); dirty = true;});
+F1input.addEventListener("input",function() {mec.F1 = -F1input.value; getForces();});
+// ainput.addEventListener("input",function() {mec.a = +ainput.value; getForces(); dirty = true;});
+// binput.addEventListener("input",function() {mec.b = +binput.value; getForces(); dirty = true;});
 
 sets();
-getForces()
+getForces();
 
 // Animation starten
 render();
