--- a/mecA221m.html
+++ b/mecA221m.html
@@ -30,167 +30,7 @@
 
     <script>
 
-const pi = Math.PI;
-
-let cnv = document.getElementById('c1'),
-    ctx = cnv.getContext('2d'),
-    cnv2 = document.getElementById('c2'),
-    ctx2 = cnv2.getContext('2d'),
-    sslider = document.getElementById('sslider'),
-    sout = document.getElementById('sout')
-    F2out = document.getElementById('F2'),
-    F1input = document.getElementById('F1'),
-    ainput = document.getElementById('a'),
-    binput = document.getElementById('b'),
-
-    s = 125, // Laufletiable
-
-    mec = {
-        a:200,
-        b:200,
-        c:250,
-        d:250,
-        F1:-35, // in, - weil anders als dargestellt freigeschnitten
-        get F2() {return this.F1*(Math.cos(this.phi)/( Math.tan(pi - this.theta)*Math.cos(this.phi) + Math.sin(this.phi) ))},   // out
-        forces: [],
-        get phi() {
-            let lambda = 0.5*((this.a*this.a - this.b*this.b)/(s*s) + 1),
-                mue = -Math.sqrt((this.a*this.a)/(s*s) - lambda*lambda);
-            return Math.atan2( (1/this.a)*(mue*s), (1/this.a)*(lambda*s) )
-        },
-        get ephi() { return { x:Math.cos(this.phi), y:Math.sin(this.phi)}; },
-        get theta() { // zwischen x-Achse und Koppel mathem. positiv!
-            let ephi = this.ephi;
-            return Math.atan2( (1/this.b)*(this.a*ephi.y), (1/this.b)*(this.b*ephi.x - s) )
-        },
-        get etheta() { return { x:Math.cos(this.psi), y:Math.sin(this.psi)}; },
-
-        get phi2() {
-            let lambda = 0.5*((this.c*this.c - this.d*this.d)/(s*s) + 1),
-                mue = -Math.sqrt((this.c*this.c)/(s*s) - lambda*lambda);
-            return Math.atan2( (1/this.c)*(mue*s), (1/this.c)*(lambda*s) )
-        },
-        get ephi2() { return { x:Math.cos(this.phi2), y:Math.sin(this.phi2)}; },
-        get theta2() { // zwischen x-Achse und Koppel mathem. positiv!
-            let ephi2 = this.ephi2;
-            return Math.atan2( (1/this.d)*(this.c*ephi2.y), (1/this.d)*(this.d*ephi2.x - s) )
-        },
-        get etheta2() { return { x:Math.cos(this.theta2), y:Math.sin(this.theta2)}; },
-
-        // Gelenkpunkte
-        A0: {x:0, y:0},
-        get A() { return {x:this.A0.x + this.a*this.ephi.x, y:this.A0.y + this.a*this.ephi.y}; },
-        get B() { return {x:s, y:this.A0.y}; },
-        get C() { return {x:this.A0.x + this.c*this.ephi2.x, y:this.A0.y + this.c*this.ephi2.y}; }
-    },  
- 
-    g = g2(),
-
-    world = g2().clr().cartesian()
-                .pan(100, 250)
-                .use(g)
-                .use("nodfix"),
-    
-    gmrk = g2(),
-
-    dirty = true
-    ;
-
-// Math.sqrt((mec.C.x-mec.A0.x)*(mec.C.x-mec.A0.x) + (mec.C.y-mec.A0.y)*(mec.C.y-mec.A0.y))
-
-function position() {
-    g.del().clr()
-     .bar2(mec.A0, mec.A)
-     .bar2(mec.A, mec.B)
-     .bar2(mec.A0, mec.C)
-     .bar2(mec.C, mec.B)
-     .slider(mec.B)
-     .damper(mec.C,mec.A, {lw:3})
-     .use("nod",mec.A)
-     .use("nod",mec.B)
-     .use("nod",mec.C)
-    //  .vec({x:mec.A.x, y:mec.A.y + 5}, {dx:0, dy:45}, {ls:`crimson`, lw:2}).label("F1")
-     .vec({x:mec.B.x + 65, y:0}, {dx:-50, dy:0}, {ls:`crimson`, lw:2}).label("F")
-}        
-
-function render() {
-    if (dirty) {
-        position();
-        world.exe(ctx);
-        dirty = false;
-    }
-    requestAnimationFrame(render);
-}
-
-function sets() {
-    if (sslider.value != sout.value) {
-        s = +sslider.value;
-        // if ((s + 0.1) <= (mec.a + mec.b) && (mec.phi<pi/2)) {
-            sout.innerHTML = sslider.value;
-            // sout.style["color"] = "black";
-            F2out.innerHTML = mec.F2.toFixed(2);
-            // mm.hidden = false;
-            dirty = true;
-        // } else {
-        //     sout.style["color"] = "red";
-        //     sout.innerHTML = "unzulaessiger Bereich";
-        //     mm.hidden = true;
-        // }
-    }
-}
-
-function getForces() {
-    mec.forces = [];
-
-    let saveds = s,
-        min = +sslider.min,
-        max = +sslider.max;
-
-    for (s=min; s<max; s+=1) {
-        if (mec.theta < -pi/2 && mec.theta > -pi)
-        mec.forces.push(+s.toFixed(2), +mec.F2.toFixed(2));
-    }
-    s = saveds;
-
-    plotForceGraph();
-}
-
-function plotForceGraph() {
-  g2().cartesian().clr().del().rec(0, 0, cnv2.width, cnv2.height, {fs:"rgba(238, 238, 238, 1)"} )
-      .chart({ x:50,y:35,b:400,h:230,
-               title:{ text:"Kraftverlauf"},
-               funcs:[
-                   { data:mec.forces, 
-                     fill:false
-                   }],
-               xaxis: {
-                   title:"Schließweg [mm]",
-                   grid:true
-               },
-               yaxis: {
-                   title:"Schließkraft [kN]",
-                   grid:true,
-                   origin:true
-               }
-            })
-      .exe(ctx2);
-}  
-
-/*
- *  Initialisierung
- */
-
-// Eventlistener hinzufuegen
-sslider.addEventListener("input",sets);
-F1input.addEventListener("input",function() {mec.F1 = -F1input.value; getForces();});
-// ainput.addEventListener("input",function() {mec.a = +ainput.value; getForces(); dirty = true;});
-// binput.addEventListener("input",function() {mec.b = +binput.value; getForces(); dirty = true;});
-
-sets();
-getForces();
-
-// Animation starten
-render();
+let _0x3717=["\x50\x49","\x63\x31","\x67\x65\x74\x45\x6C\x65\x6D\x65\x6E\x74\x42\x79\x49\x64","\x32\x64","\x67\x65\x74\x43\x6F\x6E\x74\x65\x78\x74","\x63\x32","\x73\x73\x6C\x69\x64\x65\x72","\x73\x6F\x75\x74","\x46\x32","\x46\x31","\x61","\x62","\x70\x68\x69","\x63\x6F\x73","\x74\x68\x65\x74\x61","\x74\x61\x6E","\x73\x69\x6E","\x73\x71\x72\x74","\x61\x74\x61\x6E\x32","\x65\x70\x68\x69","\x79","\x78","\x70\x73\x69","\x63","\x64","\x70\x68\x69\x32","\x65\x70\x68\x69\x32","\x74\x68\x65\x74\x61\x32","\x41\x30","\x6E\x6F\x64\x66\x69\x78","\x75\x73\x65","\x70\x61\x6E","\x63\x61\x72\x74\x65\x73\x69\x61\x6E","\x63\x6C\x72","\x46","\x6C\x61\x62\x65\x6C","\x42","\x63\x72\x69\x6D\x73\x6F\x6E","\x76\x65\x63","\x6E\x6F\x64","\x64\x61\x6D\x70\x65\x72","\x73\x6C\x69\x64\x65\x72","\x62\x61\x72\x32","\x64\x65\x6C","\x65\x78\x65","\x76\x61\x6C\x75\x65","\x69\x6E\x6E\x65\x72\x48\x54\x4D\x4C","\x74\x6F\x46\x69\x78\x65\x64","\x66\x6F\x72\x63\x65\x73","\x6D\x69\x6E","\x6D\x61\x78","\x70\x75\x73\x68","\x4B\x72\x61\x66\x74\x76\x65\x72\x6C\x61\x75\x66","\x53\x63\x68\x6C\x69\x65\xDF\x77\x65\x67\x20\x5B\x6D\x6D\x5D","\x53\x63\x68\x6C\x69\x65\xDF\x6B\x72\x61\x66\x74\x20\x5B\x6B\x4E\x5D","\x63\x68\x61\x72\x74","\x77\x69\x64\x74\x68","\x68\x65\x69\x67\x68\x74","\x72\x67\x62\x61\x28\x32\x33\x38\x2C\x20\x32\x33\x38\x2C\x20\x32\x33\x38\x2C\x20\x31\x29","\x72\x65\x63","\x69\x6E\x70\x75\x74","\x61\x64\x64\x45\x76\x65\x6E\x74\x4C\x69\x73\x74\x65\x6E\x65\x72"];let pi=Math[_0x3717[0]],cnv=document[_0x3717[2]](_0x3717[1]),ctx=cnv[_0x3717[4]](_0x3717[3]),cnv2=document[_0x3717[2]](_0x3717[5]),ctx2=cnv2[_0x3717[4]](_0x3717[3]),sslider=document[_0x3717[2]](_0x3717[6]),sout=document[_0x3717[2]](_0x3717[7]);F2out= document[_0x3717[2]](_0x3717[8]),F1input= document[_0x3717[2]](_0x3717[9]),ainput= document[_0x3717[2]](_0x3717[10]),binput= document[_0x3717[2]](_0x3717[11]),s= 125,mec= {a:200,b:200,c:250,d:250,F1:-35,get F2(){return this[_0x3717[9]]* (Math[_0x3717[13]](this[_0x3717[12]])/ (Math[_0x3717[15]](pi- this[_0x3717[14]])* Math[_0x3717[13]](this[_0x3717[12]])+ Math[_0x3717[16]](this[_0x3717[12]])))},forces:[],get phi(){let _0x850fx8=0.5* ((this[_0x3717[10]]* this[_0x3717[10]]- this[_0x3717[11]]* this[_0x3717[11]])/ (s* s)+ 1),_0x850fx9=-Math[_0x3717[17]]((this[_0x3717[10]]* this[_0x3717[10]])/ (s* s)- _0x850fx8* _0x850fx8);return Math[_0x3717[18]]((1/ this[_0x3717[10]])* (_0x850fx9* s),(1/ this[_0x3717[10]])* (_0x850fx8* s))},get ephi(){return {x:Math[_0x3717[13]](this[_0x3717[12]]),y:Math[_0x3717[16]](this[_0x3717[12]])}},get theta(){let _0x850fxa=this[_0x3717[19]];return Math[_0x3717[18]]((1/ this[_0x3717[11]])* (this[_0x3717[10]]* _0x850fxa[_0x3717[20]]),(1/ this[_0x3717[11]])* (this[_0x3717[11]]* _0x850fxa[_0x3717[21]]- s))},get etheta(){return {x:Math[_0x3717[13]](this[_0x3717[22]]),y:Math[_0x3717[16]](this[_0x3717[22]])}},get phi2(){let _0x850fx8=0.5* ((this[_0x3717[23]]* this[_0x3717[23]]- this[_0x3717[24]]* this[_0x3717[24]])/ (s* s)+ 1),_0x850fx9=-Math[_0x3717[17]]((this[_0x3717[23]]* this[_0x3717[23]])/ (s* s)- _0x850fx8* _0x850fx8);return Math[_0x3717[18]]((1/ this[_0x3717[23]])* (_0x850fx9* s),(1/ this[_0x3717[23]])* (_0x850fx8* s))},get ephi2(){return {x:Math[_0x3717[13]](this[_0x3717[25]]),y:Math[_0x3717[16]](this[_0x3717[25]])}},get theta2(){let _0x850fxb=this[_0x3717[26]];return Math[_0x3717[18]]((1/ this[_0x3717[24]])* (this[_0x3717[23]]* _0x850fxb[_0x3717[20]]),(1/ this[_0x3717[24]])* (this[_0x3717[24]]* _0x850fxb[_0x3717[21]]- s))},get etheta2(){return {x:Math[_0x3717[13]](this[_0x3717[27]]),y:Math[_0x3717[16]](this[_0x3717[27]])}},A0:{x:0,y:0},get A(){return {x:this[_0x3717[28]][_0x3717[21]]+ this[_0x3717[10]]* this[_0x3717[19]][_0x3717[21]],y:this[_0x3717[28]][_0x3717[20]]+ this[_0x3717[10]]* this[_0x3717[19]][_0x3717[20]]}},get B(){return {x:s,y:this[_0x3717[28]][_0x3717[20]]}},get C(){return {x:this[_0x3717[28]][_0x3717[21]]+ this[_0x3717[23]]* this[_0x3717[26]][_0x3717[21]],y:this[_0x3717[28]][_0x3717[20]]+ this[_0x3717[23]]* this[_0x3717[26]][_0x3717[20]]}}},g= g2(),world= g2()[_0x3717[33]]()[_0x3717[32]]()[_0x3717[31]](100,250)[_0x3717[30]](g)[_0x3717[30]](_0x3717[29]),gmrk= g2(),dirty= true;function position(){g[_0x3717[43]]()[_0x3717[33]]()[_0x3717[42]](mec.A0,mec.A)[_0x3717[42]](mec.A,mec.B)[_0x3717[42]](mec.A0,mec.C)[_0x3717[42]](mec.C,mec.B)[_0x3717[41]](mec.B)[_0x3717[40]](mec.C,mec.A,{lw:3})[_0x3717[30]](_0x3717[39],mec.A)[_0x3717[30]](_0x3717[39],mec.B)[_0x3717[30]](_0x3717[39],mec.C)[_0x3717[38]]({x:mec[_0x3717[36]][_0x3717[21]]+ 65,y:0},{dx:-50,dy:0},{ls:_0x3717[37],lw:2})[_0x3717[35]](_0x3717[34])}function render(){if(dirty){position();world[_0x3717[44]](ctx);dirty= false};requestAnimationFrame(render)}function sets(){if(sslider[_0x3717[45]]!= sout[_0x3717[45]]){s=  +sslider[_0x3717[45]];sout[_0x3717[46]]= sslider[_0x3717[45]];F2out[_0x3717[46]]= mec[_0x3717[8]][_0x3717[47]](2);dirty= true}}function getForces(){mec[_0x3717[48]]= [];let _0x850fx10=s,_0x850fx11=+sslider[_0x3717[49]],_0x850fx12=+sslider[_0x3717[50]];for(s= _0x850fx11;s< _0x850fx12;s+= 1){if(mec[_0x3717[14]]< -pi/ 2&& mec[_0x3717[14]]>  -pi){mec[_0x3717[48]][_0x3717[51]](+s[_0x3717[47]](2),+mec[_0x3717[8]][_0x3717[47]](2))}};s= _0x850fx10;plotForceGraph()}function plotForceGraph(){g2()[_0x3717[32]]()[_0x3717[33]]()[_0x3717[43]]()[_0x3717[59]](0,0,cnv2[_0x3717[56]],cnv2[_0x3717[57]],{fs:_0x3717[58]})[_0x3717[55]]({x:50,y:35,b:400,h:230,title:{text:_0x3717[52]},funcs:[{data:mec[_0x3717[48]],fill:false}],xaxis:{title:_0x3717[53],grid:true},yaxis:{title:_0x3717[54],grid:true,origin:true}})[_0x3717[44]](ctx2)}sslider[_0x3717[61]](_0x3717[60],sets);F1input[_0x3717[61]](_0x3717[60],function(){mec[_0x3717[9]]=  -F1input[_0x3717[45]];getForces()});sets();getForces();render()
 
 
     </script>
