updated g2-chart cdn

--- a/mecA221m.html
+++ b/mecA221m.html
@@ -26,7 +26,7 @@
      
     <script src="https://gitcdn.xyz/repo/goessner/g2/master/g2.min.js"></script>
     <script src="https://gitcdn.xyz/repo/goessner/g2-mec/master/g2.mec.min.js"></script>    
-    <script src="https://gitcdn.xyz/repo/goessner/g2-chart/master/g2.chart.min.js"></script>
+    <script src="https://gitcdn.xyz/repo/jauhl/jauhl.github.io/master/g2-chart-fixed.js"></script>
 
     <script>
 
