added planar4bars app

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 
 <body>
   <h2>GitHub Pages of jauhl</h2>
-  <a href="./mecapp/mecindex.html">Mechanismentechnik - App<a>   
+  <a href="./mecapp/mecindex.html">Mechanismentechnik - App<a>
+  <p></p>
+  <a href="./mecapp/planar4bars_multi_v1.0">highly experimental app for analyzing planar 4-bar mechanisms<a>   
   <p></p>
   <a href="./RETS1_v2.36_webpraesentation.html">FlySim Viergelenk<a>
   <p></p>
