--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <h2>GitHub Pages of jauhl</h2>
   <a href="./mecapp/mecindex.html">Mechanismentechnik - App<a>
   <p></p>
-  <a href="./planar4bars_multi_v1.0.html">highly experimental multifunctional app for analyzing planar 4-bar mechanisms<a>   
+  <a href="./planar4bars.html">highly experimental multifunctional app for analyzing planar 4-bar mechanisms<a>   
   <p></p>
   <a href="./RETS1_v2.36_webpraesentation.html">FlySim Viergelenk<a>
   <p></p>
