--- a/PWA/PWA.html
+++ b/PWA/PWA.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>PWA test</title>
-    <link rel="canonical" href="https://jauhl.github.io/PWA/" />
+    <link rel="canonical" href="https://jauhl.github.io/PWA" />
     <style type="text/css">
      html,
         body {
@@ -37,7 +37,7 @@
   <script>
   // register ServiceWorker, remember to use absolute path!
   if (navigator.serviceWorker) {
-    navigator.serviceWorker.register('https://jauhl.github.io/PWA/sw.js', {scope: 'https://jauhl.github.io/PWA/'})
+    navigator.serviceWorker.register('/PWA/sw.js', {scope: '/PWA/'})
   }
   
   // --- Application code here ---
