--- a/PWA/PWA.html
+++ b/PWA/PWA.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>PWA test</title>
-    <link rel="canonical" href="https://jauhl.github.io/PWA" />
+    <link rel="canonical" href="https://jauhl.github.io/PWA/" />
     <style type="text/css">
      html,
         body {
